// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby={null}
    className="cf-y1rhga"
    role="navigation"
  >
    Pagination
  </ul>
</div>
`;

exports[`should render with info 1`] = `
<div
  className="cf-1bek1ug"
  id={undefined}
  style={undefined}
>
  <ul
    aria-describedby="cf-pagination-1"
    className="cf-y1rhga"
    role="navigation"
  >
    Pagination
  </ul>
  <span
    id="cf-pagination-1"
  >
    Pagination Info
  </span>
</div>
`;
